<resources>
    <string name="app_name">DO</string>
    <string name="enter_task_here">Enter Task Here</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_new_task">Add New Task</string>
    <string name="tasks">Tasks</string>
    <string name="delete_task">Delete Task</string>
    <string name="search">Search</string>
    <string name="search_">Search…</string>
    <string name="notify_me">Notify Me</string>
    <string name="enter_date_here">Enter Date Here</string>
    <string name="pick_a_date">Pick A Date</string>
    <string name="date_picker">Date Picker</string>
    <string name="select_date">Select Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minimize">Minimize</string>
</resources>